tests/type_checker/pass/dummy-syntax-poc-client.core
module 'dummy-syntax-poc-client' ['module_info'/0,
				  'module_info'/1,
				  'negation'/3]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[112|[97|[115|[115|[47|[100|[117|[109|[109|[121|[45|[115|[121|[110|[116|[97|[120|[45|[112|[111|[99|[45|[99|[108|[105|[101|[110|[116|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 9
		'type' =
		    %% Line 9
		    [{'new',{'type',{9,16},'pid',[]},[]}],
		%% Line 10
		'type' =
		    %% Line 10
		    [{'consume',{'type',{10,20},'any',[]},[]}],
		%% Line 29
		'spec' =
		    %% Line 29
		    [{{'negation',3},[{'type',{29,15},'fun',[{'type',{29,15},'product',[{'user_type',{29,16},'new',[]}|[{'user_type',{29,22},'consume',[]}|[{'type',{29,32},'integer',[]}]]]}|[{'type',{29,46},'integer',[]}]]}]}]]
'negation'/3 =
    %% Line 30
    ( fun (_0,_1,_2) ->
	  do  %% Line 31
	      call 'io':'format'
		  ([68|[69|[66|[85|[71|[58|[32|[83|[116|[97|[114|[116|[101|[100|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]])
	      let <SessionID> =
		  call %% Line 33
		       'gen_server_plus':%% Line 33
					 'call'
		      (_0, %% Line 33
			   'new')
	      in  do  %% Line 34
		      call 'io':'format'
			  ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[115|[116|[97|[114|[116|[101|[100|[32|[115|[101|[115|[115|[105|[111|[110|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]])
		      %% Line 35
		      case call 'gen_server_plus':'call'
			       (_0, SessionID, 'neg') of
			<{}> when 'true' ->
			    do  %% Line 36
				call 'io':'format'
				    ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[99|[104|[111|[115|[101|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]])
				let <Res> =
				    call %% Line 43
					 'gen_server_plus':%% Line 43
							   'call'
					(_0, %% Line 43
					     SessionID, _2)
				in  do  %% Line 44
					call 'io':'format'
					    ([67|[108|[105|[101|[110|[116|[32|[115|[101|[110|[116|[32|[105|[110|[116|[101|[103|[101|[114|[32|[97|[110|[100|[32|[103|[111|[116|[32|[114|[101|[115|[112|[111|[110|[115|[101|[58|[32|[126|[119|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]], [Res|[]])
					%% Line 45
					{SessionID}
			( <_4> when 'true' ->
			      primop 'match_fail'
				  ({'badmatch',_4})
			  -| ['compiler_generated'] )
		      end
      -| [{'function',{'negation',3}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('dummy-syntax-poc-client')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('dummy-syntax-poc-client', ( _0
					    -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end