tests/type_checker/fail/wrong-return-type.core
module 'wrong-return-type' ['module_info'/0,
			    'module_info'/1,
			    'negation'/3]
    attributes [%% Line 1
		'file' =
		    %% Line 1
		    [{[116|[101|[115|[116|[115|[47|[116|[121|[112|[101|[95|[99|[104|[101|[99|[107|[101|[114|[47|[102|[97|[105|[108|[47|[119|[114|[111|[110|[103|[45|[114|[101|[116|[117|[114|[110|[45|[116|[121|[112|[101|[46|[101|[114|[108]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],1}],
		%% Line 9
		'type' =
		    %% Line 9
		    [{'new',{'type',{9,16},'pid',[]},[]}],
		%% Line 10
		'type' =
		    %% Line 10
		    [{'consume',{'type',{10,20},'any',[]},[]}],
		%% Line 29
		'session' =
		    %% Line 29
		    [39|[110|[101|[103|[97|[116|[105|[111|[110|[39|[40|[110|[101|[119|[40|[43|[123|[110|[101|[103|[58|[33|[105|[110|[116|[101|[103|[101|[114|[46|[32|[63|[105|[110|[116|[101|[103|[101|[114|[46|[32|[101|[110|[100|[125|[41|[44|[99|[111|[110|[115|[117|[109|[101|[40|[101|[110|[100|[41|[44|[95|[41]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]],
		%% Line 30
		'spec' =
		    %% Line 30
		    [{{'negation',3},[{'type',{30,15},'fun',[{'type',{30,15},'product',[{'user_type',{30,16},'new',[]}|[{'user_type',{30,22},'consume',[]}|[{'type',{30,32},'integer',[]}]]]}|[{'type',{30,46},'integer',[]}]]}]}]]
'negation'/3 =
    %% Line 31
    ( fun (_0,_1,_2) ->
	  do  %% Line 32
	      call 'io':'format'
		  ([68|[69|[66|[85|[71|[58|[32|[83|[116|[97|[114|[116|[101|[100|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]])
	      let <SessionID> =
		  call %% Line 34
		       'gen_server_plus':%% Line 34
					 'new'
		      (_0)
	      in  do  %% Line 35
		      call 'io':'format'
			  ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[115|[116|[97|[114|[116|[101|[100|[32|[115|[101|[115|[115|[105|[111|[110|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]])
		      do  %% Line 36
			  call 'gen_server_plus':'call'
			      (_0, SessionID, 'neg')
			  do  %% Line 37
			      call 'io':'format'
				  ([68|[69|[66|[85|[71|[58|[32|[67|[108|[105|[101|[110|[116|[32|[99|[104|[111|[115|[101|[32|[110|[101|[103|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]])
			      let <Res> =
				  call %% Line 44
				       'gen_server_plus':%% Line 44
							 'call'
				      (_0, %% Line 44
					   SessionID, _2)
			      in  do  %% Line 45
				      call 'io':'format'
					  ([67|[108|[105|[101|[110|[116|[32|[115|[101|[110|[116|[32|[105|[110|[116|[101|[103|[101|[114|[32|[97|[110|[100|[32|[103|[111|[116|[32|[114|[101|[115|[112|[111|[110|[115|[101|[58|[32|[126|[119|[126|[110]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]], [Res|[]])
				      %% Line 47
				      SessionID
      -| [{'function',{'negation',3}}] )
'module_info'/0 =
    ( fun () ->
	  call 'erlang':'get_module_info'
	      ('wrong-return-type')
      -| [{'function',{'module_info',0}}] )
'module_info'/1 =
    ( fun (_0) ->
	  call 'erlang':'get_module_info'
	      ('wrong-return-type', ( _0
				      -| [{'function',{'module_info',1}}] ))
      -| [{'function',{'module_info',1}}] )
end